[package]
authors = ["Daiki Ihara <sasurau4@gmail.com>"]
description = """
github-cli-utils support your deily OSS development via GitHub.
"""
documentation = "https://github.com/sasurau4/github-cli-utils"
edition = "2018"
license = "MIT"
name = "github-cli-utils"
readme = "README.md"
repository = "https://github.com/sasurau4/github-cli-utils"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "3"
env_logger = "0.9"
git2 = "0.15"
log = "0.4.0"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
